<resources>
    <string name="app_name">Drive Code</string>
    <string name="title">DriveCode</string>
    <string name="login">Login</string>
    <string name="register">Registrar</string>
    <string name="easyOk">Tudo fica mais fácil</string>
    <string name="forget">Esqueceu a password ?</string>
    <string name="easy_desc">DriveCode te ajuda aprender todos códigos de estrada</string>
    <string name="everywhere">Código atualizado</string>
    <string name="everywhere_desc">DriveCode fornece códigos atualizados</string>
    <string name="Prepare">Prepara-se para o exame</string>
    <string name="Prepare_desc">DriveCode permite fazer pré-exame para veres o teu nível de preparação</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Palavra Passe</string>
    <string name="prompt_repassword">Confirme a Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sing_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string name="ANTERIOR">ANTERIOR</string>
    <string name="PROXIMO">PROXIMO</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="image">Image</string>
    <string name="exame">Exame</string>
    <string name="Rendimento">Rendimento</string>
    <string name="ajuda">Ajuda</string>
    <string name="sair">Sair</string>
    <string name="indice">Indice</string>
    <string name="normas">1. Normas</string>
    <string name="sinais_de_tr_nsito">2. Sinais de Trânsito</string>
    <string name="_3_condutor_e_seu_estado_f_sico_e_psicol_gico">3. Condutor e Seu Estado Físico e Psicológico</string>
    <string name="content">Conteúdos</string>
    <string name="proximo">Próximo</string>
    <string name="perigo_introducao">
        Sinais de perigo : indicam a existência ou a possibilidade de aparecimento de condições particularmente perigosas
        para o trânsito que imponham especial atenção e prudência ao condutor. \n\n
        Os sinais de perigo não devem ser colocados a menos de 150m nem a mais de 300m do ponto da via a que se refrem, a não ser que as condições do lacl não permitam, devendo, neste caso, ser utilizado um painel adicional indicador da distância.

    </string>
    <string name="sinal_de_perigo">sinal_de_perigo</string>
    <string name="bem_ao_drivecode">Bem ao DriveCode</string>
    <string name="fa_a_o_login_para_continuar">Faça o login para continuar</string>
    <string name="main_image">main_image</string>
    <string name="registrar_para_uma_conta">Registrar para uma conta?</string>
    <string name="s_novo_usu_rio">És novo usuário?</string>
    <string-array name="contents_perigo_array">
        <item> Curva à direita</item>
        <item> Curva à esquerda</item>
        <item> Curva à direita e contracurva</item>
        <item> Curva à esquerda e contracurva</item>
        <item> Lomba</item>
        <item> Depressão</item>
        <item> Lomba ou depressão</item>
        <item> Descida perigosa</item>
        <item> Subida de inclinação acentuada</item>
        <item> Passagem estreita</item>
        <item> Passagem estreita</item>
        <item> Passagem estreita</item>
        <item> Pavimento escorregadio</item>
        <item> Projeção de gravilha</item>
    </string-array>
    <string name="scedencia">Sinais de cedência de passagem</string>
    <string name="sinais_regulamentacao">Sinais de Regulamentação</string>
    <string name="sregulamentation_intreducao">
       Os sinais de regulamentação destinam-se a transmitir aos utentes obrigações, restrições ou proibições especiais e subdidivem-se em:  \n

           Sinais de cedência de passagem \n
           Sinais de proibição \n
           Sinais de obrigação \n
           Sinais de prescrição \n
               1. Sinais de seleção de vias; \n
               2. Sinais de afectação de vias; \n
               3. Sinais de zona.

    </string>
    <string name="scedencia_introducao">
      Sinais de cedência de passagem - informa aos condutores da existência de um cruzamento, entrocamento, rotunda ou passagem estreita,
        onde lhes é imposto um determinadi comportamento ou uma especial atenção.
    </string>
    <string name="scobrigacao_introducao">
     Sinais de obrigação : transmitem aos utentes a imposição de determinados compartamentos.\n
        Devem ser colocados na proximidade imediata do local onde a obrigação começa, com excepção dos sinais D1, D2 e D4, que podem
        ser colocados a uma distância conveniente do local onde a obrigação é imposta.
    </string>
    <string name="fa_a_o_seu_sign_in_para_come_ar">Faça o seu sign in para começar</string>
    <string name="password">Password</string>
    <string-array name="content_scendencia_lista">
        <item>Cedência de passagem</item>
        <item>Paragem obrigatória</item>
        <item>Via com prioridade</item>
        <item>Fim da via com prioridade</item>
        <item>Cedência de passagem</item>
        <item>Prioridades nos estreitamentos da faixa de rodagem</item>
        <item>aproximação de rotunda</item>
        <item>Cruzamento com via sem prioridade</item>
        <item>Entrocamento com via sem prioridade</item>
        <item>Entrocamento com via sem prioridade</item>
        <item>Entrocamento com via sem prioridade</item>
        <item>Entrocamento com via sem prioridade</item>

    </string-array>
    <string-array name="content_sproibicao_lista">
        <item> Sentido proibido</item>
        <item>Trânsito proibido</item>
        <item>Trânsito proibido a automóveis com carro</item>
        <item>Trânsito proibido a automóveis pesados</item>
        <item>Trânsito proibido a automóveis de mercadorias</item>
        <item>Trânsito probido a automóveis de mercadorias de peso total superior a, ...toneladas</item>
        <item>Trânsito proibido a motociclos simples</item>
        <item>Trânsito proibido a Velocípedes</item>
    </string-array>
    <string name="sinais_de_probicao_introducao">
        Sinais de proibição : transmitem aos utentes a interdição de determinados comportamentos.\n
        Devem ser colocados na proximidade imediata do local onde a proibição começa, com excessãõ de "proibição de virar á direita e a esquerda, e inversão de sentido de marcha.
    </string>
    <string name="btn_forgot_password">Esqueceste a palavra passe?</string>
    <string name="btn_link_to_login">Já estás registrado?. <b>Login !</b></string>
    <string name="or">OR</string>
    <string name="sinais_de_proibicaoo">Sinais de Proibição</string>
    <string-array name="content_obrigacao_array">
        <item>Sentido obrigatório</item>
        <item>Sentido obrigatório</item>
        <item>Sentido obrigatório</item>
        <item>Sentido obrigatório</item>
        <item>Sentido obrigatório</item>
        <item>Sentido obrigatório Possíveis</item>
        <item>Sentido obrigatório Possíveis</item>
        <item>Sentido obrigatório Possíveis</item>
        <item>Obrigação de contornar a placa ou obstáculo</item>
        <item>Obrigação de contornar a placa ou obstáculo</item>
    </string-array>
    <string-array name="st_array_name">
        <item>Número e sentido de vias de trânsito</item>
        <item>Número e sentido de vias de trânsito</item>
        <item>Número e sentido de vias de trânsito</item>
        <item>Número e sentido de vias de trânsito</item>
        <item> Supressão de via de trânsito</item>
        <item>Supressão de berma</item>
        <item>Desvio de via de trânsito</item>
        <item> Desvio para a faixa de rodagem contrária</item>
        <item>Estreitamento de via de trânsito</item>
        <item>Pré-sinalização de desvio de itinerário</item>
        <item>Desvio de itinerário</item>
        <item> Desvio de itinerário</item>
        <item>Pré-sinalização de desvio de itinerário</item>
        <item>Circulação alternada</item>


    </string-array>
</resources>