<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.in.bluetech.myapplication.ContentFragment"
    android:orientation="vertical"
    android:background="@color/hex_deep_sky">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indice"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/normas"
        style="@style/indice_title"
        android:text="@string/normas"/>
    <TextView
        android:text="@string/sinais_de_tr_nsito"
        style="@style/indice_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/indice_title"
        android:text="@string/_3_condutor_e_seu_estado_f_sico_e_psicol_gico"
        android:layout_marginEnd="16dp" />
</LinearLayout>
