<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.in.bluetech.myapplication.MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="122dp"
        android:layout_height="158dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/main_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        app:layout_goneMarginBottom="8dp" />


    <TextView
        android:id="@+id/mtitle"
        android:text="@string/title"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_width="200dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/logo"/>

</android.support.constraint.ConstraintLayout>